Fix issue with stretched aircraft pictures when width insufficient

--- a/VirtualRadar.WebSite/Site/Web/css/vrs-common.css
+++ b/VirtualRadar.WebSite/Site/Web/css/vrs-common.css
@@ -287,6 +287,8 @@ body.wait .modal {
     border: 1px solid #a0a0a0;
     margin: 2px;
     max-width: 95%;
+    height: auto;
+    width: auto;
 }
 .vrsAircraftDetail li.multiline {
     float: none;
